Fix the header items alignment and add the responsiveness (#1475)

--- a/src/common/header/header.css
+++ b/src/common/header/header.css
@@ -101,7 +101,7 @@
   display: none;
 }
 
-@media (min-width: 768px) {
+@media (min-width: 1217px) {
   .navbar-toggler {
     display: none;
   }
@@ -175,7 +175,7 @@
   margin-right: 1rem;
 }
 
-@media screen and (max-width: 768px) {
+@media screen and (max-width: 1217px) {
   .navbar-collapse.show {
     display: block;
     position: fixed;
@@ -369,6 +369,15 @@
   .header-links > li:last-child > .app-header-btn {
     margin-left: -.2rem;
   } */
+}
+
+@media screen and (max-width: 1217px) {
+  .header-links > li > .app-header-btn.app-header-btn--secondary {
+    color: var(--color-neutral-80);
+  }
+  .menu-events {
+    margin: 0.4rem 0 0rem 0;
+  }
 }
 
 /* searchs Modal */
